	
Mon Feb 16 08:17:19 CET 2004

	- Cleaned up parser a little bit. It does not make sense to allow a
	  typename to be typedef'ed that cannot be parsed as variable type.
	- Allowed some SQL keywords to be used as C variable names.

Tue Feb 24 16:48:57 CET 2004

	- Corrected error handling in PGTYPEStimestamp_from_asc.
	
Mon Mar  1 08:56:37 CET 2004
	
	- Added partly missing VOLATILE keyword.
	
Thu Mar  4 08:29:02 CET 2004

	- Fixed segfault due to missing check for variable declaration.
	- Added check for multidimensional array usage.
	
Sun Mar 14 12:59:15 CET 2004

	- Fixed Informix compat math functions to cope with the situations
	  where one argument takes the result.
	- Applied thread patches by Lee Kindness
	
Mon Mar 29 17:02:52 CEST 2004

	- Fixed possible segfault in type.c (by Juergen Cappel)
	
Thu Apr 22 14:13:57 CEST 2004

	- Fixed double usage of allocated memory.
	
Thu Apr 29 16:06:37 CEST 2004

	- Synced parser and keyword list.
	
Wed May  5 11:51:47 CEST 2004

	- Fixed bug in adjust_informix that treated arrays as simple
	  variables.
	- Synced parser again.
	- Synced lexer.
	
Fri May  7 15:34:05 CEST 2004

	- Added portability file to pgtypeslib.
	- Fixed bug that reversed string length in typedefs.
	- Added additional test case.
	
Mon May 10 15:38:58 CEST 2004

	- Argh, just another bug in adjust_informix.
	- Added "extern C" flags for C++ compiler.

Fri May 21 15:17:35 CEST 2004
	
	- Fixed DEALLOCATE PREPARE to use correct function call
	- Made sure connect statement does not accept single char variable,
	  but only strings.
	  
Sat May 22 13:11:12 CEST 2004

	- Added pg_config_paths.h to ecpglib.
	
Thu Jun 17 13:50:06 CEST 2004

	- Added patch by ISHIDA Akio to allow indicators in execute
	  statements.
	  
Sun Jun 20 12:44:01 CEST 2004

	- Synced parser and keyword list.
	- Set pgtypes library version to 1.2.
	- Set ecpg version to 3.2.0.
	- Set compat library version to 1.2.
	- Set ecpg library version to 4.2.
